--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "lint": "stylelint --syntax=scss \"src/**/**.scss\"",
-    "compile": "node-sass --output-style=expanded --source-map=true src/differs.scss dist/differs.css",
+    "compile": "sass src/differs.scss dist/differs.css",
     "prefix": "postcss dist/differs.css --use=autoprefixer --map=false --output=dist/differs.css",
     "minify": "cleancss --level=1 --source-map --source-map-inline-sources --output dist/differs.min.css dist/differs.css",
     "dev": "npm run compile -- --watch",
@@ -39,7 +39,6 @@
   "devDependencies": {
     "autoprefixer": "^9.7.1",
     "clean-css-cli": "^4.3.0",
-    "node-sass": "^4.13.0",
     "postcss-cli": "^6.1.3",
     "stylelint": "^11.1.1",
     "stylelint-order": "^3.1.1",
