--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "stylelint": "^11.1.1",
     "stylelint-order": "^3.1.1",
     "stylelint-scss": "^3.12.1"
+  },
+  "dependencies": {
+    "sass": "^1.25.0"
   }
 }
